sctf-hugo/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
  - name: nginx
    port: 80
    targetPort: 80
